--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="https://img.freepik.com/premium-photo/photograph-car_931878-112753.jpg?w=740" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Brand Shop</title>
 </head>
